--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   font_awesome_flutter: ^10.6.0
   get: ^4.6.6
+  get_it: ^7.6.7
   google_fonts: ^6.1.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
